fix: avoid spacing between two parts

--- a/app/[lang]/_home/dev-framework/DevFramework.module.css
+++ b/app/[lang]/_home/dev-framework/DevFramework.module.css
@@ -1,3 +1,4 @@
 .root {
   padding: 3rem 0;
+  margin: rem(-4px) 0;
 }
