--- a/app/[lang]/_home/tool/Tool.module.css
+++ b/app/[lang]/_home/tool/Tool.module.css
@@ -1,4 +1,5 @@
 .root {
   background-color: #f3f4f5;
   padding: 3rem 0;
+  margin: rem(-4px) 0;
 }
